--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
+    "axios": "^1.4.0",
+    "cookies": "^0.8.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "cryptojs": "^2.5.3",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,7 +29,10 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/cookies": "^0.7.7",
     "@types/crypto-js": "^4.1.1",
-    "@types/cryptojs": "^3.1.30"
+    "@types/cryptojs": "^3.1.30",
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
